chore: further cleanup